# xue-xi-zhong-wen

./: .gitignore  CHANGELOG.md  FORMATTER_README.md  LICENSE.md  MANIFEST.in  Makefile  PYTHON_SETUP.md  README.md  format.bat  format.sh  format_config.ini  format_markdown.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_formatter.py  wiki_utils.py
A1/: README.md
A1/confronti/: numeri.md
A1/parti-del-discorso/: avverbi.md  congiunzioni.md  frasi-verbali.md  numeri.md  particelle.md  verbi-ausiliari.md  verbi.md
A1/strutture-grammaticali/: basi.md  forme-di-domanda.md
A2/: README.md
A2/confronti/: avverbi.md  verbi-ausiliari.md
A2/parti-del-discorso/: aggettivi.md  avverbi-con-aggettivi.md  avverbi.md  congiunzioni.md  frasi-verbali.md  numeri-e-classificatori.md  numeri.md  particelle.md  preposizioni.md  sostantivi.md  verbi-ausiliari.md  verbi.md
A2/strutture-grammaticali/: complementi.md  forme-di-domanda.md  numeri-e-classificatori.md  schemi-di-frase.md  sintagmi-nominali.md
B1/: README.md
B1/confronti/: avverbi.md  congiunzioni.md  parole-temporali.md  preposizioni.md  sostantivi.md  verbi-ausiliari.md
B1/parti-del-discorso/: aggettivi.md  avverbi-con-aggettivi.md  avverbi.md  classificatori.md  congiunzioni.md  frasi-verbali.md  numeri.md  parole-ausiliarie.md  particelle.md  preposizioni.md  sostantivi.md  verbi-ausiliari.md  verbi.md
B1/strutture-grammaticali/: complementi.md  forme-di-domanda.md  schemi-di-frase.md  sintagmi-nominali.md
B2/: README.md
B2/confronti/: avverbi.md  congiunzioni.md  funzioni-separate.md  parole-ausiliarie.md  preposizioni.md
B2/parti-del-discorso/: aggettivi.md  avverbi.md  congiunzioni.md  frasi-verbali.md  parole-ausiliarie.md  particelle.md  preposizioni.md  schemi-di-frase.md  sintagmi-preposizionali.md  sostantivi.md  verbi-ausiliari.md  verbi.md
B2/strutture-grammaticali/: avverbi-con-aggettivi.md  complementi.md  dichiarazioni-anche-se.md  dichiarazioni-causa-effetto.md  dichiarazioni-condizionali.md  dichiarazioni-ma.md  dichiarazioni-non-importa.md  dichiarazioni-se.md  espressioni-condizionali.md
